# watchupdog

./: .gitignore  LICENSE  README.md  find_comfyui.py  install_comfyui.py  key_test.py  pyproject.toml  watchupdog-linux.sh  watchupdog-macos.command  watchupdog-windows.bat  watchupdog.example.toml
comfyui_health/: __init__.py  backup.py  checks.py  cli.py  client.py  config.py  dashboard.py  dashboard_server.py  env_checks.py  html_export.py  interactive_menu.py  nunchaku.py  pip_checks.py  settings_editor.py  webhooks.py
offline/: README.txt  download_packages.py
presets/: minimal.toml  nunchaku.toml
tests/: fixtures.py  test_backup.py  test_checks.py  test_checks_missing_fields.py  test_checks_stale.py  test_client.py  test_config.py  test_html_export.py  test_multi_device.py  test_nunchaku.py  test_snapshot_corruption.py  test_urllib_fault_injection.py  test_webhook_blocking.py  test_webhooks.py
watchupdog/: __init__.py  backup.py  checks.py  cli.py  config.py  dashboard.py  dashboard_server.py  env_checks.py  html_export.py  interactive_menu.py  metrics.py  model_scanner.py  models.py  node_scanner.py  nunchaku.py  pip_checks.py  settings_editor.py  symlinks.py  webhooks.py
